The final solutions using flex instead of position. cause you know...

--- a/flex-test.html
+++ b/flex-test.html
@@ -19,7 +19,7 @@
         <img
           class="qr-img"
           src="/qr-code-component-main/images/image-qr-code.png"
-          alt="the image of the qr-code itself"
+          alt="the image of the qr-code itself."
         />
         <h1 class="title">
           Improve your front-end skills by building projects
