--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <img
           class="qr-img"
-          src="/qr-code-component-main/images/image-qr-code.png"
+          src="images/image-qr-code.png"
           alt="the image of the qr-code itself."
         />
         <h1 class="title">
